string value pass

--- a/template_practice/one.html
+++ b/template_practice/one.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is First page</p>
+	
+    <p>This is First page for {{.}}</p>
 </body>
 </html>
