if else with eq function

--- a/template_practice/one.html
+++ b/template_practice/one.html
@@ -9,7 +9,7 @@
 <body>
 	
    {{if .}}
-    <p>This is First page for {{.}}</p>
+    {{if eq  1000 .}} This is valid {{else}} Your value {{.}} {{end}}
     {{end}}
 </body>
 </html>
