lecture 22 index page update

--- a/lecture_22/index.html
+++ b/lecture_22/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Master Academy</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet" />
 </head>
@@ -171,7 +171,7 @@
             <div class="condition">                
                 <span>Terms & Policies</span> &nbsp; &nbsp;
                 <span>Do not sell personal information</span> &nbsp; &nbsp;
-                <span>@ 2020 All Rights Resurved</span>&nbsp
+                <span>&copy 2020 All Rights Resurved</span>&nbsp
             </div>
         </footer>
     </div>
